<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_RPi_IMU_Serial_Publisher</name>
  <version>0.0.0</version>
  <description>A Node hosted on the main NUC that reads data from the RPi that is transmitting data and publishes it to an RPi IMU specific topic.</description>
  <maintainer email="joshua.wei.anderson@gmail.com">Joshua Anderson</maintainer>
  <license>TODO: License declaration</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
